2008-01-21  mefyl  <hocquet@gostai.com>

	Use file_library.
	* libport: Update.
	* include/kernel/userver.hh,
	* src/console-server.cc,
	* src/userver.cc: Use file_library instead of manual .u files
	lookup.

2008-01-19  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Comment change.
	* tests-local.mk: Here.

2008-01-19  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Document --with-boost in INSTALL.
	* INSTALL: Here.

2008-01-19  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Update a copyright year.
	* AUTHORS: Here.

2008-01-19  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Remove a deprecated file.
	* buildnumber.php: Remove.

2008-01-18  Akim Demaille  <demaille@gostai.com>

	Update libport uses.
	We now use lib/libport, include/libport, build-aux, instead
	of looking for then inside libport.  They are symlinked at
	bootstrap time.
	* bootstrap: List the modules we subscribe to.
	* Makefile.am, configure.ac, src/Makefile.am,
	* src/kernel.mk, src/parser/parser.mk: Adjust.

2008-01-18  Akim Demaille  <demaille@gostai.com>

	Adjust to urbi-sdk-remote.
	* src/Makefile.am, src/kernel.mk (uobject_srcdir): Adjust.
	* urbi-sdk: Rename as...
	* urbi-sdk-remote: this.

2008-01-16  Matthieu Nottale  <nottale@gostai.com>

	Mark new test every-emit as XFAIL.
	* tests-local.mk: Here.

2008-01-15  Thomas Moulard  <thomas@moulard.net>

	Revert patches 2371 to 2374.
	* configure.ac,
	* src/Makefile.am,
	* src/console-server.cc,
	* src/kernel.mk: Revert.
	* src/console-server-options.cc: Remove.
	* src/console-server-options.hh: Remove.
	* src/console-server.hh: Remove.

2008-01-15  Akim Demaille  <demaille@gostai.com>

	merge -r 1835:2373 https://svn.gostai.com/svn/kernel1/branches/1.5
	2008-01-11  Guillaume Deslandes  <deslandes@gostai.com>
	Merge foreach patch (trunk r2237:2238).
	* src/ucommand.cc: Here.
	* tests-local.mk: Remove 1.x/for-in from XFAILS.

	2008-01-11  Guillaume Deslandes  <deslandes@gostai.com>
	Implicite "notag" is now "".
	Update tests.
	* include/kernel/uconnection.hh,