@@ -1,3 +1,8 @@
+2008-01-21  Loic Fosse  <fosse@gostai.com>
+
+	Floats written .xxx and xxx. are deprecated.
+	* src/parser/utoken.l: Here.
+
 2008-01-21  mefyl  <hocquet@gostai.com>
 
 	Use file_library.
